add logout, updateProfile, changepassword to swagger
