# src/routes/authRoutes.js
@@ -8,5 +8,6 @@ router.post('/login', authController.login);
 router.get('/profile', protect, authController.getProfile);
 router.put('/profile', protect, authController.updateProfile);
 router.put('/change-password', protect, authController.changePassword);
+router.post('/logout', protect, authController.logout);
 
 module.exports = router;
